--- a/day02/devops/hello/templates/index.html
+++ b/day02/devops/hello/templates/index.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>{{content}} {{user}}</h1>
+<h1>
+    {{content}} {{user}}
+    <br>
+    <li><b><a href="/hello/userlist/">hellouser</a></b>     </li>
+    <li><b><a href="/admin/">admin</a></b>     </li>
+
+</h1>
 </body>
 </html>
